@@ -10,6 +10,8 @@ glibc (2.19-4) UNRELEASED; urgency=medium
 
   [ Adam Conrad ]
   * debian/control.in/main: glibc-source Conflics/Replaces eglibc-source.
+  * debian/patches/powerpc/local-powerpc8xx-dcbz.diff: Restrict the trap
+    to 32-bit builds, since the Freescale 8xx CPUs aren't 64-bit capable.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 17 Jun 2014 20:33:56 +0200
 
